--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cálculo de XP de Nível</title>
+    <title id="title">Cálculo de XP de Nível</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Adiciona Font Awesome -->
 </head>
-<body>
+<body class="dark-mode">
     <div class="container">
         <div class="language-selector">
             <label for="language">Idioma/Language:</label>
@@ -16,23 +17,28 @@
             </select>
         </div>
 
+        <div class="mode-toggle">
+            <i id="toggleMode" class="fas fa-moon"></i> <!-- Ícone de lua -->
+        </div>
+
         <h1 id="title">Cálculo de XP de Nível</h1>
+
         <form id="xpForm">
-            <label for="nivelInicial" class="label-nivelInicial">Nível Inicial:</label>
+            <label class="label-nivelInicial" for="nivelInicial">Nível Inicial:</label>
             <input type="number" id="nivelInicial" name="nivelInicial" min="1" max="150" required>
 
-            <label for="nivelFinal" class="label-nivelFinal">Nível Final:</label>
+            <label class="label-nivelFinal" for="nivelFinal">Nível Final:</label>
             <input type="number" id="nivelFinal" name="nivelFinal" min="1" max="150" required>
 
             <button type="submit" id="calculateButton">Calcular XP</button>
         </form>
 
         <div id="resultado"></div>
-    </div>
 
-    <footer>
-        <p id="credits">Desenvolvido por @freitriste</p>
-    </footer>
+        <footer>
+            <p id="credits">Desenvolvido por [Seu Nome] com a ajuda do ChatGPT</p>
+        </footer>
+    </div>
 
     <script src="script.js"></script>
 </body>
