--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="title">Cálculo de XP de Nível</title>
+    <title id="title">Last War XP Calculator</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Adiciona Font Awesome -->
 </head>
@@ -21,7 +21,7 @@
             <i id="toggleMode" class="fas fa-moon"></i> <!-- Ícone de lua -->
         </div>
 
-        <h1 id="title">Cálculo de XP de Nível</h1>
+        <h1 id="js_tiltle">Cálculo de XP de Nível</h1>
 
         <form id="xpForm">
             <label class="label-nivelInicial" for="nivelInicial">Nível Inicial:</label>
@@ -36,7 +36,7 @@
         <div id="resultado"></div>
 
         <footer>
-            <p id="credits">Desenvolvido por [Seu Nome] com a ajuda do ChatGPT</p>
+            <p id="credits">Desenvolvido por @freitriste</p>
         </footer>
     </div>
 
