--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="title">Last War XP Calculator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Adiciona Font Awesome -->
 </head>
 <body class="dark-mode">
@@ -36,10 +36,13 @@
         <div id="resultado"></div>
 
         <footer>
-            <p id="credits">Desenvolvido por <a href="https://github.com/freitriste">Felipe</a> e Web por <a href="https://github.com/matheusvhs">Matheus</a></p>
+            <p id="credits">Desenvolvido por <a href="https://github.com/freitriste">Felipe</a> e <a href="https://github.com/matheusvhs">Matheus</a></p>
         </footer>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/xp-calculator.js"></script>
+    <script src="js/language-handler.js"></script>
+    <script src="js/theme-handler.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
